--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ before_script:
 #  - emulator -avd test -no-skin -no-audio -no-window &
 
 script:
-  - ./gradle build --continue
+  - ./gradlew build --continue
